[workspace]
resolver = "2"
members = [
    "crates/fj",
    "crates/fj-core",
    "crates/fj-export",
    "crates/fj-interop",
    "crates/fj-math",
    "crates/fj-viewer",
    "crates/fj-window",

    "models/all",
    "models/color",
    "models/cuboid",
    "models/holes",
    "models/spacer",
    "models/split",
    "models/star",
    "models/vertices-indices",

    "tools/autolib",
    "tools/automator",
    "tools/cross-compiler",
    "tools/export-validator",
    "tools/release-operator",
]
default-members = [
    "crates/fj",
    "crates/fj-core",
    "crates/fj-export",
    "crates/fj-interop",
    "crates/fj-math",
    "crates/fj-viewer",
    "crates/fj-window",
]


[workspace.package]
version = "0.49.0"
edition = "2024"

description = "Early-stage b-rep CAD kernel."
readme = "README.md"
homepage = "https://www.fornjot.app/"
repository = "https://github.com/hannobraun/fornjot"
license = "0BSD"
keywords = ["cad", "programmatic", "code-cad"]
categories = ["encoding", "mathematics", "rendering"]


[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
# I really don't see any point in this. It can make a public API ugly, but
# a) that will be obvious, even without a lint, and
# b) it provides benefits in private APIs with top-level re-exports.
module_inception = "allow"


[workspace.dependencies.fj]
version = "0.49.0"
path = "crates/fj"

[workspace.dependencies.fj-core]
version = "0.49.0"
path = "crates/fj-core"

[workspace.dependencies.fj-export]
version = "0.49.0"
path = "crates/fj-export"

[workspace.dependencies.fj-interop]
version = "0.49.0"
path = "crates/fj-interop"

[workspace.dependencies.fj-math]
version = "0.49.0"
path = "crates/fj-math"

[workspace.dependencies.fj-viewer]
version = "0.49.0"
path = "crates/fj-viewer"

[workspace.dependencies.fj-window]
version = "0.49.0"
path = "crates/fj-window"
