[package]
name = "fj-app"
version = "0.5.0"
edition = "2021"

description = "The world needs another CAD program."
readme = "../README.md"
repository = "https://github.com/hannobraun/fornjot"
license = "0BSD"
keywords = ["cad", "programmatic", "code-cad"]
categories = ["mathematics", "rendering"]


[dependencies]
anyhow = "1.0.56"
bytemuck = "1.9.1"
futures = "0.3.21"
nalgebra = "0.30.0"
parry3d-f64 = "0.8.0"
thiserror = "1.0.30"
threemf = "0.2.0"
tracing = "0.1.33"
wgpu = "0.12.0"
wgpu_glyph = "0.16.0"
winit = "0.26.1"

[dependencies.clap]
version = "3.1.8"
features = ["derive"]

[dependencies.figment]
version = "0.10.6"
features = ["env", "toml"]

[dependencies.fj]
version = "0.5.0"
path = "../fj"

[dependencies.fj-host]
version = "0.5.0"
path = "../fj-host"

[dependencies.fj-interop]
version = "0.5.0"
path = "../fj-interop"

[dependencies.fj-kernel]
version = "0.5.0"
path = "../fj-kernel"

[dependencies.fj-math]
version = "0.5.0"
path = "../fj-math"

[dependencies.fj-operations]
version = "0.5.0"
path = "../fj-operations"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.11"
features = ["env-filter", "fmt"]
