[package]
name = "fj-interop"
version = "0.5.0"
edition = "2021"

description = "The world needs another CAD program."
readme = "../README.md"
repository = "https://github.com/hannobraun/fornjot"
license = "0BSD"
keywords = ["cad", "programmatic", "code-cad"]


[dependencies.fj-math]
path = "../fj-math"
version = "0.5.0"
