[package]
name    = "fj"
version = "0.2.0"
authors = ["Hanno Braun <hanno@braun-odw.eu>"]
edition = "2018"

description = "Experimental CAD system"
readme      = "../README.md"
repository  = "https://github.com/hannobraun/fornjot"
license     = "0BSD"
keywords    = ["cad", "programmatic", "constructive", "solid", "geometry"]
categories  = ["mathematics", "rendering"]


[dependencies]
anyhow             = "1.0.41"
bytemuck           = "1.6.1"
clap               = "3.0.0-beta.2"
decorum            = "0.3.1"
futures            = "0.3.15"
indexmap           = "1.6.2"
itertools          = "0.10.1"
nalgebra           = "0.28.0"
serde              = "1.0.126"
serde_json         = "1.0.64"
thiserror          = "1.0.25"
tracing            = "0.1.26"
tracing-subscriber = "0.2.18"
wgpu               = "0.9.0"
winit              = "0.25.0"
xml-rs             = "0.8.3"
zip                = "0.5.13"
