[package]
name    = "fj-host"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow     = "*"
bytemuck   = "*"
decorum    = "*"
futures    = "*"
indexmap   = "*"
libloading = "*"
nalgebra   = "*"
thiserror  = "*"
tracing    = "*"
wgpu       = "*"
wgpu_glyph = "*"
winit      = "*"

[dependencies.fj]
path = "fj"
