[package]
name    = "fj-host"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow     = "*"
bytemuck   = "*"
clap       = "3.0.0-beta.5"
decorum    = "*"
futures    = "*"
indexmap   = "*"
libloading = "*"
nalgebra   = "*"
thiserror  = "*"
tracing    = "*"
wgpu       = "*"
wgpu_glyph = "*"
winit      = "*"

[dependencies.fj]
path = "fj"
