[package]
name = "release-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["std", "derive", "env"], default_features = false }
cmd_lib = "1"
env_logger = "0.9"
log = "0.4"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
