[package]
name = "release-operator"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow     = "1.0.56"
cmd_lib    = "1.3.0"
env_logger = "0.9.0"
log        = "0.4.16"
regex      = "1.5.5"
semver     = "1.0.7"
serde_json = "1.0.79"

[dependencies.serde]
version  = "1.0.136"
features = ["derive"]

[dependencies.clap]
version  = "3.1.6"
features = ["std", "derive", "env"]
default_features = false
