[package]
name = "fj-app"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0.69"
fj.workspace = true
fj-export.workspace = true
fj-host.workspace = true
fj-interop.workspace = true
fj-kernel.workspace = true
fj-math.workspace = true
fj-operations.workspace = true
fj-viewer.workspace = true
fj-window.workspace = true

[dependencies.clap]
version = "4.1.8"
features = ["derive", "string"]

[dependencies.figment]
version = "0.10.8"
features = ["env", "toml"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter", "fmt"]
