[package]
name = "fj-core"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fj-interop.workspace = true
fj-math.workspace = true
itertools = "0.13.0"
parking_lot = "0.12.3"
robust = "1.1.0"
spade = "2.8.0"
thiserror = "1.0.61"
type-map = "0.5.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
anyhow = "1.0.86"
