[package]
name = "fj-core"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fj-interop.workspace = true
fj-math.workspace = true
itertools = "0.14.0"
parking_lot = "0.12.4"
robust = "1.2.0"
spade = "2.15.0"
thiserror = "2.0.15"
type-map = "0.5.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
anyhow = "1.0.99"
