[package]
name = "fj-core"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
approx = "0.5.1"
fj-interop.workspace = true
fj-math.workspace = true
geo = "0.32.0"
itertools = "0.14.0"
parking_lot = "0.12.5"
parry2d-f64 = "0.25.3"
parry3d-f64 = "0.25.3"
robust = "1.2.0"
spade = "2.15.0"
thiserror = "2.0.18"
type-map = "0.5.1"

# We don't depend on `getrandom` directly, but we need this to enable the `js`
# feature when cross-compiling to WASM. Otherwise, `getrandom` will not build.
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2.17"
features = ["js"]

[dev-dependencies]
pretty_assertions = "1.4.1"
anyhow = "1.0.101"
