[package]
name = "fj-export"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fj-interop.workspace = true
fj-math.workspace = true
thiserror = "1.0.61"
threemf = "0.5.0"
stl = "0.2.1"
wavefront_rs = "=2.0.0-beta.1"
