[package]
name = "fj-gfx"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
wgpu_glyph = "0.16.0"
bytemuck = "1.9.1"
thiserror = "1.0.31"
tracing = "0.1.34"
winit = "0.26.1"

[dependencies.fj-interop]
version = "0.6.0"
path = "../fj-interop"

[dependencies.fj-gui]
version = "0.6.0"
path = "../fj-gui"

[dependencies.fj-math]
version = "0.6.0"
path = "../fj-math"
