[package]
name = "fj-host"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
cargo_metadata = "0.15.0"
crossbeam-channel = "0.5.6"
fj.workspace = true
libloading = "0.7.4"
notify = "5.0.0"
thiserror = "1.0.35"
tracing = "0.1.37"
