[package]
name = "fj-host"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
cargo_metadata = "0.15.4"
crossbeam-channel = "0.5.8"
fj.workspace = true
fj-interop.workspace = true
fj-operations.workspace = true
libloading = "0.8.0"
notify = "5.1.0"
thiserror = "1.0.40"
tracing = "0.1.37"
