[package]
name = "fj-interop"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies.fj-math]
path = "../fj-math"
version = "0.16.0"
