[package]
name = "fj-kernel"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fj-interop.workspace = true
fj-math.workspace = true
parking_lot = "0.12.0"
parry2d-f64 = "0.10.0"
pretty_assertions = "1.3.0"
robust-predicates = "0.1.4"
spade = "2.0.0"
thiserror = "1.0.35"
try-insert-ext = "0.1.0"

[dev-dependencies]
anyhow = "1.0.66"
