[package]
name = "fj-kernel"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fj-interop.workspace = true
fj-math.workspace = true
iter_fixed = "0.3.1"
itertools = "0.10.5"
parking_lot = "0.12.0"
pretty_assertions = "1.3.0"
robust = "0.2.3"
spade = "2.1.0"
thiserror = "1.0.39"
type-map = "0.5.0"

[dev-dependencies]
anyhow = "1.0.69"
