[package]
name = "fj-math"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
approx = "0.5.1"
decorum = "0.3.1"
nalgebra = "0.33.2"
num-traits = "0.2.19"
parry2d-f64 = "0.17.3"
parry3d-f64 = "0.17.3"
robust = "1.1.0"
