[package]
name = "fj-math"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
approx = "0.5.1"
decorum = "0.4.0"
iter_fixed = "0.4.0"
nalgebra = "0.34.0"
num-traits = "0.2.19"
parry2d-f64 = "0.24.0"
parry3d-f64 = "0.24.0"
robust = "1.2.0"
