[package]
name = "fj-operations"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror = "1.0.35"

[dependencies.fj]
version = "0.16.0"
path = "../fj"

[dependencies.fj-math]
version = "0.16.0"
path = "../fj-math"

[dependencies.fj-interop]
version = "0.16.0"
path = "../fj-interop"

[dependencies.fj-kernel]
version = "0.16.0"
path = "../fj-kernel"
