[package]
name = "fj-operations"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fj.workspace = true
fj-interop.workspace = true
fj-kernel.workspace = true
fj-math.workspace = true
itertools = "0.10.5"
thiserror = "1.0.40"
