[package]
name = "fj-proc"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.52"
quote = "1.0.26"

[dependencies.serde]
version = "1.0.155"
optional = true

[dependencies.syn]
version = "1.0.109"
features = ["full", "extra-traits"]
