[package]
name = "fj-proc"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.23"

[dependencies.serde]
version = "1.0.162"
optional = true

[dependencies.syn]
version = "2.0.15"
features = ["full", "extra-traits"]
