[package]
name = "fj-viewer"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true


[dependencies]
fj-interop.workspace = true
fj-math.workspace = true
nalgebra = "0.33.2"
tobj = "4.0.3"
raw-window-handle = "0.6.0"
thiserror = "2.0.11"
tracing = "0.1.41"

[dependencies.bytemuck]
version = "1.21.0"
features = ["derive"]

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[dependencies.wgpu]
version = "24.0.1"
features = ["webgl"]

# We don't depend on `getrandom` directly, but we need this to enable the `js`
# feature when cross-compiling to WASM. Otherwise, `getrandom` will not build.
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2.15"
features = ["js"]
