[package]
name = "fj-viewer"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true


[dependencies]
fj-interop.workspace = true
fj-math.workspace = true
futures = "0.3.31"
nalgebra = "0.33.2"
tobj = "4.0.3"
raw-window-handle = "0.6.0"
thiserror = "2.0.12"
tracing = "0.1.41"
winit = "0.30.11"

[dependencies.bytemuck]
version = "1.23.1"
features = ["derive"]

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[dependencies.wgpu]
version = "26.0.0"
features = ["webgl"]

# We don't depend on `getrandom` directly, but we need this to enable the
# `wasm_js` feature when cross-compiling to WASM. Otherwise, `getrandom` will
# not build.
#
# Please note that this alone is not enough to make this workaround work. To
# make the selected backend available, `--cfg` flag needs to be passed to rustc.
# We do this in `tools/cross-compiler/src/main.rs`.
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.3.3"
features = ["wasm_js"]
