[package]
name = "fj-viewer"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true


[dependencies]
fj-interop.workspace = true
fj-math.workspace = true
futures = "0.3.31"
nalgebra = "0.34.1"
tobj = "4.0.3"
raw-window-handle = "0.6.0"
thiserror = "2.0.18"
tracing = "0.1.44"
winit = "0.30.12"
glyphon = "0.10.0"
itertools = "0.14.0"

[dependencies.bytemuck]
version = "1.24.0"
features = ["derive"]

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[dependencies.wgpu]
version = "28.0.0" # must always stay compatible with glyphon
features = ["webgl"]

# We don't depend on `getrandom` directly, but we need this to enable the
# `wasm_js` feature when cross-compiling to WASM. Otherwise, `getrandom` will
# not build.
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.3.4"
features = ["wasm_js"]
