[package]
name = "fj-window"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fj-host.workspace = true
fj-operations.workspace = true
fj-viewer.workspace = true
fj-interop.workspace = true
crossbeam-channel = "0.5.8"
futures = "0.3.28"
thiserror = "1.0.40"
tracing = "0.1.37"
winit = "0.28.5"

[dependencies.egui-winit]
version = "0.21.1"
default-features = false
