[package]
name = "fj-window"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true


[dependencies]
fj-interop.workspace = true
fj-math.workspace = true
fj-viewer.workspace = true
futures = "0.3.30"
thiserror = "1.0.61"
winit = "0.30.0"
