[package]
name = "fj"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true


[dependencies]
fj-core.workspace = true
fj-export.workspace = true
fj-viewer.workspace = true
stl = "0.2.1"
thiserror = "2.0.18"
threemf = "0.8.0"
tracing = "0.1.44"
wavefront_rs = "=2.0.0-beta.1"

[dependencies.clap]
version = "4.6.1"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.23"
features = ["env-filter"]
