[workspace]

[package]
name = "fj"
edition = "2021"

[dependencies]
anyhow = "*"
anymap3 = "*"
glyphon = "*"
iter_fixed = "*"
itertools = "*"
pollster = "*"
spade = "*"
threemf = "*"
wgpu = "*"
winit = "*"

[dependencies.bytemuck]
version = "*"
features = ["derive"]

[dependencies.glam]
version = "*"
features = ["bytemuck"]
