[workspace]

[package]
name = "fj"
edition = "2024"

[dependencies]
anyhow = "*"
itertools = "*"
spade = "*"

[dependencies.fj-export]
path = "../../crates/fj-export"

[dependencies.fj-interop]
path = "../../crates/fj-interop"

[dependencies.fj-math]
path = "../../crates/fj-math"

[dependencies.fj-viewer]
path = "../../crates/fj-viewer"

[dependencies.geo]
version = "*"
default-features = false

[dependencies.plotters]
version = "*"
default-features = false
