[workspace]

[package]
name = "fj"
edition = "2024"

[dependencies]
anyhow = "*"
bytemuck = "*"
futures = "*"
image = "*"
itertools = "*"
nalgebra = "*"
spade = "*"
thiserror = "*"
tobj = "*"
tracing = "*"
wgpu = "*"
winit = "*"

[dependencies.fj-export]
path = "../../crates/fj-export"

[dependencies.fj-interop]
path = "../../crates/fj-interop"

[dependencies.fj-math]
path = "../../crates/fj-math"

[dependencies.fj-viewer]
path = "../../crates/fj-viewer"

[dependencies.geo]
version = "*"
default-features = false

[dev-dependencies]
approx = "*"
