[workspace]

[package]
name = "fj"
edition = "2024"

[dependencies]
anyhow = "*"
bytemuck = "*"
futures = "*"
glyphon = "*"
image = "*"
itertools = "*"
nalgebra = "*"
spade = "*"
thiserror = "*"
tobj = "*"
tracing = "*"
wgpu = "25" # pinned, to keep compatible with `glyphon`
winit = "*"

[dependencies.fj-export]
path = "../../crates/fj-export"

[dependencies.fj-interop]
path = "../../crates/fj-interop"

[dependencies.fj-math]
path = "../../crates/fj-math"

[dependencies.geo]
version = "*"
default-features = false

[dev-dependencies]
approx = "*"
