[workspace]

[package]
name = "fj"
edition = "2024"

[dependencies]
anyhow = "*"
bytemuck = "*"
futures = "*"
glyphon = "*"
image = "*"
itertools = "*"
nalgebra = "*"
thiserror = "*"
tobj = "*"
tracing = "*"
wgpu = "25" # version pinned for compatibility with `glyphon`
winit = "*"

[dependencies.fj-interop]
path = "../../crates/fj-interop"

[dependencies.fj-math]
path = "../../crates/fj-math"
