[workspace]

[package]
name = "fj"
edition = "2024"

[dependencies]
anyhow = "*"
geo = "*"
itertools = "*"
spade = "*"

[dependencies.fj-core]
path = "../../crates/fj-core"

[dependencies.fj-export]
path = "../../crates/fj-export"

[dependencies.fj-interop]
path = "../../crates/fj-interop"

[dependencies.fj-math]
path = "../../crates/fj-math"

[dependencies.fj-viewer]
path = "../../crates/fj-viewer"
