[package]
name = "all"
version = "0.1.0"
edition = "2021"

[dependencies.fj]
path = "../../crates/fj"

[dependencies.color]
path = "../color"

[dependencies.cuboid]
path = "../cuboid"

[dependencies.holes]
path = "../holes"

[dependencies.spacer]
path = "../spacer"

[dependencies.split]
path = "../split"

[dependencies.star]
path = "../star"
